# nflverse-fabric-reference-architecture

./: .gitignore  README.md  acquire_nflverse.py  pyproject.toml
.claude/: settings.json
data-agent-react-chatbot-app/: README.md
docs/: Evaluation Question Manual Testing.xlsx  nfl_fabric_nflreadpy_codex_plan.md  ~$Evaluation Question Manual Testing.xlsx
docs/transition_slides/: generate_intro_architecture_slide.mjs  generate_iterative_data_agent_slide.mjs  generate_semantic_model_slide.mjs  generate_transition_slides.mjs  generate_youtube_thumbnail.mjs
notebooks/: Lakehouse Data Agent Evaluations.ipynb  Semantic Model Data Agent Evaluations.ipynb  build_silver_gold_contracts_combine_nextgen.ipynb  build_silver_gold_nfl_model.ipynb  build_silver_gold_nfl_model.py  evaluate_nfl_data_agent.ipynb  evaluate_nfl_data_agent.py  import_contracts_combine_nextgen_to_bronze.ipynb  import_raw_nflverse_to_bronze.ipynb  validate_gold_metrics.ipynb  validate_gold_metrics.py
scripts/: acquire_contracts_combine_nextgen.py  create_nfl_play_by_play_sm.py
semantic_model/: nfl_gold_measures.dax  nfl_gold_semantic_model_guide.md
semantic_model_project/: README.md
semantic_model_project/NFL Play by Play Model.SemanticModel/: .platform  NFL Play by Play Model.pbip  diagramLayout.json
src/nfl_fabric_acquisition/: __init__.py  _polars_startup.py  cli.py  config.py  io.py  pipeline.py  quality.py
tests/: test_config.py  test_pipeline.py  test_quality.py
web-app/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
web-app/src/app/: page.tsx
(+48 files in other folders)
