[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-fabric-acquisition"
version = "0.1.0"
description = "Fetch nflverse data with nflreadpy and stage raw parquet files for Fabric."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "nflreadpy>=0.1.0",
  "polars[rtcompat]>=1.39.3,<1.40.0",
  "pyarrow>=16.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
acquire-nflverse = "nfl_fabric_acquisition.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

